disable cmake force-verbose

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ ENDIF (COMMAND cmake_policy)
 
 PROJECT(OpenCPN)
 
-SET(CMAKE_VERBOSE_MAKEFILE ON)
+#SET(CMAKE_VERBOSE_MAKEFILE ON)
 message(STATUS "cmake version: ${CMAKE_VERSION}")
 
 IF(APPLE)
